kubernetes/kpt/filerun/filerun-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: filerun
---
apiVersion: v1
kind: Service
metadata:
  name: filerun
  namespace: filerun
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.214
  selector:
    app: filerun
  ports:
  - name: filerun
    port: 80
    targetPort: 80
    protocol: TCP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filerun
  namespace: filerun
  labels:
    app: filerun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filerun
  template:
    metadata:
      labels:
        app: filerun
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: filerun
        image: afian/filerun:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: html
          mountPath: /var/www/html
        - name: media
          mountPath: /user-files/media
        - name: recordings
          mountPath: /user-files/recordings
          readOnly: true
        - name: backups
          mountPath: /user-files/backups
          readOnly: true
        - name: cron
          mountPath: /etc/crontab
          subPath: crontab
        - name: start-cron
          mountPath: /etc/rc.local
          subPath: rc.local
      - name: tika
        image: logicalspark/docker-tikaserver:latest
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.8.13 
        securityContext:
          privileged: true
          runAsUser: 1000
          capabilities:
            add:
            - IPC_LOCK
            - SYS_RESOURCE 
        volumeMounts:
        - name: elasticsearch
          mountPath: /usr/share/elasticsearch/data
        - name: es-index
          mountPath: /var/www/html/cron/
        resources:
          requests: 
            memory: "1G"
          limits:            
            memory: "1G"
      volumes:
      - name: html
        nfs:
          server: gimli.home
          path: /appdata/filerun/html
      - name: elasticsearch
        nfs:
          server: gimli.home
          path: /appdata/filerun/elasticsearch
      - name: media
        nfs:
          server: gimli.home
          path: /media/media/
      - name: recordings
        nfs:
          server: gimli.home
          path: /recordings/
      - name: backups
        nfs:
          server: gimli.home
          path: /tank/backup    
      - name: es-index
        configMap:
          name: filerun-indexing-cron
          items:
            - key: process_search_index_queue.sh
              path: process_search_index_queue.sh
      - name: cron
        configMap:
          name: filerun-indexing-cron
          items:
            - key: crontab
              path: crontab
      - name: start-cron
        configMap:
          name: filerun-indexing-cron
          items:
            - key: rc.local
              path: rc.local
