kubernetes/kpt/filerun/filerun-mariadb-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: filerun
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
  - name: mariadb
    port: 3306
    targetPort: 3306
    protocol: TCP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: filerun
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: db
        image: mariadb:10.3
        ports:
        - name: mariadb
          containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: db
          mountPath: /var/lib/mysql
      volumes:
      - name: db
        nfs:
          server: gimli.home
          path: /appdata/filerun/db
