kubernetes/kpt/filerun/filerun.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filerun-ingress
  namespace: filerun
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - filerun.lester.network
    secretName: filerun-tls
  rules:
  - host: filerun.lester.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: filerun
            port:
              number: 80
